xpointer/target/generated-sources/antlr3/org/etourdot/xincproc/xpointer/grammar/XPointerParser.java
// $ANTLR 3.4 org/etourdot/xincproc/xpointer/grammar/XPointerParser.g 2018-12-15 17:34:39

    package org.etourdot.xincproc.xpointer.grammar;
    import org.etourdot.xincproc.xpointer.exceptions.*;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class XPointerParser extends AbstractXPointerParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHILDSEQUENCE", "CIRC", "COLON", "COVERINGRANGE", "DIGIT", "ELEMENT", "ENTITY", "EQUAL", "ESCCIRC", "ESCLBRACE", "ESCRBRACE", "HERE", "LBRACE", "NCNAME", "NCNAMECHAR", "NCNAMESTARTCHAR", "ORIGIN", "POINT", "RANGE", "RANGEINSIDE", "RANGETO", "RBRACE", "S", "SPECIALCARS", "STARTPOINT", "STRINGRANGE", "XMLNS", "XPATH", "XPOINTER", "COVERINGRANG", "DATAS", "ELEMENTSCHEME", "FUNCTION", "LOCALNAME", "NAMESPACE", "OTHERSCHEME", "POINTER", "PREFIX", "QNAME", "SCHEMEBASED", "XMLNSSCHEME", "XPATHSCHEME", "XPOINTERSCHEME"
    };

    public static final int EOF=-1;
    public static final int CHILDSEQUENCE=4;
    public static final int CIRC=5;
    public static final int COLON=6;
    public static final int COVERINGRANGE=7;
    public static final int DIGIT=8;
    public static final int ELEMENT=9;
    public static final int ENTITY=10;
    public static final int EQUAL=11;
    public static final int ESCCIRC=12;
    public static final int ESCLBRACE=13;
    public static final int ESCRBRACE=14;
    public static final int HERE=15;
    public static final int LBRACE=16;
    public static final int NCNAME=17;
    public static final int NCNAMECHAR=18;
    public static final int NCNAMESTARTCHAR=19;
    public static final int ORIGIN=20;
    public static final int POINT=21;
    public static final int RANGE=22;
    public static final int RANGEINSIDE=23;
    public static final int RANGETO=24;
    public static final int RBRACE=25;
    public static final int S=26;
    public static final int SPECIALCARS=27;
    public static final int STARTPOINT=28;
    public static final int STRINGRANGE=29;
    public static final int XMLNS=30;
    public static final int XPATH=31;
    public static final int XPOINTER=32;
    public static final int COVERINGRANG=33;
    public static final int DATAS=34;
    public static final int ELEMENTSCHEME=35;
    public static final int FUNCTION=36;
    public static final int LOCALNAME=37;
    public static final int NAMESPACE=38;
    public static final int OTHERSCHEME=39;
    public static final int POINTER=40;
    public static final int PREFIX=41;
    public static final int QNAME=42;
    public static final int SCHEMEBASED=43;
    public static final int XMLNSSCHEME=44;
    public static final int XPATHSCHEME=45;
    public static final int XPOINTERSCHEME=46;

    // delegates
    public AbstractXPointerParser[] getDelegates() {
        return new AbstractXPointerParser[] {};
    }

    // delegators


    public XPointerParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public XPointerParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[58+1];
         

    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return XPointerParser.tokenNames; }
    public String getGrammarFileName() { return "org/etourdot/xincproc/xpointer/grammar/XPointerParser.g"; }


    public static class pointer_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "pointer"
    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:36:1: pointer : ( NCNAME -> ( ^( POINTER NCNAME ) )? | pointerpart ( ( S )? pointerpart )* -> ( ^( POINTER ( pointerpart )* ) )? );
    public final XPointerParser.pointer_return pointer() throws XPointerException, RecognitionException {
        XPointerParser.pointer_return retval = new XPointerParser.pointer_return();
        retval.start = input.LT(1);

        int pointer_StartIndex = input.index();

        CommonTree root_0 = null;

        Token NCNAME1=null;
        Token S3=null;
        XPointerParser.pointerpart_return pointerpart2 =null;

        XPointerParser.pointerpart_return pointerpart4 =null;


        CommonTree NCNAME1_tree=null;
        CommonTree S3_tree=null;
        RewriteRuleTokenStream stream_S=new RewriteRuleTokenStream(adaptor,"token S");
        RewriteRuleTokenStream stream_NCNAME=new RewriteRuleTokenStream(adaptor,"token NCNAME");
        RewriteRuleSubtreeStream stream_pointerpart=new RewriteRuleSubtreeStream(adaptor,"rule pointerpart");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }

            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:38:5: ( NCNAME -> ( ^( POINTER NCNAME ) )? | pointerpart ( ( S )? pointerpart )* -> ( ^( POINTER ( pointerpart )* ) )? )
            int alt3=2;
            switch ( input.LA(1) ) {
            case NCNAME:
                {
                switch ( input.LA(2) ) {
                case COLON:
                case LBRACE:
                    {
                    alt3=2;
                    }
                    break;
                case EOF:
                    {
                    alt3=1;
                    }
                    break;
                default:
                    if (state.backtracking>0) {state.failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }

                }
                break;
            case ELEMENT:
            case XMLNS:
            case XPATH:
            case XPOINTER:
                {
                alt3=2;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }

            switch (alt3) {
                case 1 :
                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:38:9: NCNAME
                    {
                    NCNAME1=(Token)match(input,NCNAME,FOLLOW_NCNAME_in_pointer240); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_NCNAME.add(NCNAME1);


                    // AST REWRITE
                    // elements: NCNAME
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 38:18: -> ( ^( POINTER NCNAME ) )?
                    {
                        // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:38:21: ( ^( POINTER NCNAME ) )?
                        if ( stream_NCNAME.hasNext() ) {
                            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:38:21: ^( POINTER NCNAME )
                            {
                            CommonTree root_1 = (CommonTree)adaptor.nil();
                            root_1 = (CommonTree)adaptor.becomeRoot(
                            (CommonTree)adaptor.create(POINTER, "POINTER")
                            , root_1);

                            adaptor.addChild(root_1, 
                            stream_NCNAME.nextNode()
                            );

                            adaptor.addChild(root_0, root_1);
                            }

                        }
                        stream_NCNAME.reset();

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;
                case 2 :
                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:39:4: pointerpart ( ( S )? pointerpart )*
                    {
                    pushFollow(FOLLOW_pointerpart_in_pointer256);
                    pointerpart2=pointerpart();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_pointerpart.add(pointerpart2.getTree());

                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:39:17: ( ( S )? pointerpart )*
                    loop2:
                    do {
                        int alt2=2;
                        switch ( input.LA(1) ) {
                        case ELEMENT:
                        case NCNAME:
                        case S:
                        case XMLNS:
                        case XPATH:
                        case XPOINTER:
                            {
                            alt2=1;
                            }
                            break;

                        }

                        switch (alt2) {
                    	case 1 :
                    	    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:39:18: ( S )? pointerpart
                    	    {
                    	    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:39:18: ( S )?
                    	    int alt1=2;
                    	    switch ( input.LA(1) ) {
                    	        case S:
                    	            {
                    	            alt1=1;
                    	            }
                    	            break;
                    	    }

                    	    switch (alt1) {
                    	        case 1 :
                    	            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:39:18: S
                    	            {
                    	            S3=(Token)match(input,S,FOLLOW_S_in_pointer260); if (state.failed) return retval; 
                    	            if ( state.backtracking==0 ) stream_S.add(S3);


                    	            }
                    	            break;

                    	    }


                    	    pushFollow(FOLLOW_pointerpart_in_pointer263);
                    	    pointerpart4=pointerpart();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) stream_pointerpart.add(pointerpart4.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    // AST REWRITE
                    // elements: pointerpart
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {

                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (CommonTree)adaptor.nil();
                    // 39:35: -> ( ^( POINTER ( pointerpart )* ) )?
                    {
                        // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:39:38: ( ^( POINTER ( pointerpart )* ) )?
                        if ( stream_pointerpart.hasNext() ) {
                            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:39:38: ^( POINTER ( pointerpart )* )
                            {
                            CommonTree root_1 = (CommonTree)adaptor.nil();
                            root_1 = (CommonTree)adaptor.becomeRoot(
                            (CommonTree)adaptor.create(POINTER, "POINTER")
                            , root_1);

                            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:39:48: ( pointerpart )*
                            while ( stream_pointerpart.hasNext() ) {
                                adaptor.addChild(root_1, stream_pointerpart.nextTree());

                            }
                            stream_pointerpart.reset();

                            adaptor.addChild(root_0, root_1);
                            }

                        }
                        stream_pointerpart.reset();

                    }


                    retval.tree = root_0;
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException e) {

                    emitErrorMessage("Error: invalid xpointer expression '" + input + "'");
                    recover(input,e);
                
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, pointer_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "pointer"


    public static class pointerpart_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "pointerpart"
    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:46:1: pointerpart : ( pointerpart_element | pointerpart_xpath | pointerpart_xpointer | pointerpart_xmlns | pointerpart_otherscheme );
    public final XPointerParser.pointerpart_return pointerpart() throws XPointerException, RecognitionException {
        XPointerParser.pointerpart_return retval = new XPointerParser.pointerpart_return();
        retval.start = input.LT(1);

        int pointerpart_StartIndex = input.index();

        CommonTree root_0 = null;

        XPointerParser.pointerpart_element_return pointerpart_element5 =null;

        XPointerParser.pointerpart_xpath_return pointerpart_xpath6 =null;

        XPointerParser.pointerpart_xpointer_return pointerpart_xpointer7 =null;

        XPointerParser.pointerpart_xmlns_return pointerpart_xmlns8 =null;

        XPointerParser.pointerpart_otherscheme_return pointerpart_otherscheme9 =null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }

            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:48:2: ( pointerpart_element | pointerpart_xpath | pointerpart_xpointer | pointerpart_xmlns | pointerpart_otherscheme )
            int alt4=5;
            switch ( input.LA(1) ) {
            case ELEMENT:
                {
                alt4=1;
                }
                break;
            case XPATH:
                {
                alt4=2;
                }
                break;
            case XPOINTER:
                {
                alt4=3;
                }
                break;
            case XMLNS:
                {
                alt4=4;
                }
                break;
            case NCNAME:
                {
                alt4=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:48:4: pointerpart_element
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_pointerpart_element_in_pointerpart300);
                    pointerpart_element5=pointerpart_element();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, pointerpart_element5.getTree());

                    }
                    break;
                case 2 :
                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:49:6: pointerpart_xpath
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_pointerpart_xpath_in_pointerpart307);
                    pointerpart_xpath6=pointerpart_xpath();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, pointerpart_xpath6.getTree());

                    }
                    break;
                case 3 :
                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:50:6: pointerpart_xpointer
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_pointerpart_xpointer_in_pointerpart314);
                    pointerpart_xpointer7=pointerpart_xpointer();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, pointerpart_xpointer7.getTree());

                    }
                    break;
                case 4 :
                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:51:6: pointerpart_xmlns
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_pointerpart_xmlns_in_pointerpart321);
                    pointerpart_xmlns8=pointerpart_xmlns();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, pointerpart_xmlns8.getTree());

                    }
                    break;
                case 5 :
                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:52:6: pointerpart_otherscheme
                    {
                    root_0 = (CommonTree)adaptor.nil();


                    pushFollow(FOLLOW_pointerpart_otherscheme_in_pointerpart328);
                    pointerpart_otherscheme9=pointerpart_otherscheme();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, pointerpart_otherscheme9.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException e) {

                    emitErrorMessage("Error: invalid pointerpart expression '" + input + "'");
                    recover(input,e);
                
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, pointerpart_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "pointerpart"


    public static class pointerpart_element_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "pointerpart_element"
    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:59:1: pointerpart_element : ELEMENT LBRACE elementschemedata RBRACE -> ( ^( ELEMENTSCHEME ( elementschemedata )? ) )? ;
    public final XPointerParser.pointerpart_element_return pointerpart_element() throws XPointerException, RecognitionException {
        XPointerParser.pointerpart_element_return retval = new XPointerParser.pointerpart_element_return();
        retval.start = input.LT(1);

        int pointerpart_element_StartIndex = input.index();

        CommonTree root_0 = null;

        Token ELEMENT10=null;
        Token LBRACE11=null;
        Token RBRACE13=null;
        XPointerParser.elementschemedata_return elementschemedata12 =null;


        CommonTree ELEMENT10_tree=null;
        CommonTree LBRACE11_tree=null;
        CommonTree RBRACE13_tree=null;
        RewriteRuleTokenStream stream_ELEMENT=new RewriteRuleTokenStream(adaptor,"token ELEMENT");
        RewriteRuleTokenStream stream_RBRACE=new RewriteRuleTokenStream(adaptor,"token RBRACE");
        RewriteRuleTokenStream stream_LBRACE=new RewriteRuleTokenStream(adaptor,"token LBRACE");
        RewriteRuleSubtreeStream stream_elementschemedata=new RewriteRuleSubtreeStream(adaptor,"rule elementschemedata");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }

            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:61:5: ( ELEMENT LBRACE elementschemedata RBRACE -> ( ^( ELEMENTSCHEME ( elementschemedata )? ) )? )
            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:61:9: ELEMENT LBRACE elementschemedata RBRACE
            {
            ELEMENT10=(Token)match(input,ELEMENT,FOLLOW_ELEMENT_in_pointerpart_element361); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ELEMENT.add(ELEMENT10);


            LBRACE11=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_pointerpart_element363); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LBRACE.add(LBRACE11);


            pushFollow(FOLLOW_elementschemedata_in_pointerpart_element365);
            elementschemedata12=elementschemedata();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_elementschemedata.add(elementschemedata12.getTree());

            RBRACE13=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_pointerpart_element367); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RBRACE.add(RBRACE13);


            // AST REWRITE
            // elements: elementschemedata
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 61:53: -> ( ^( ELEMENTSCHEME ( elementschemedata )? ) )?
            {
                // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:61:56: ( ^( ELEMENTSCHEME ( elementschemedata )? ) )?
                if ( stream_elementschemedata.hasNext() ) {
                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:61:56: ^( ELEMENTSCHEME ( elementschemedata )? )
                    {
                    CommonTree root_1 = (CommonTree)adaptor.nil();
                    root_1 = (CommonTree)adaptor.becomeRoot(
                    (CommonTree)adaptor.create(ELEMENTSCHEME, "ELEMENTSCHEME")
                    , root_1);

                    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:61:72: ( elementschemedata )?
                    if ( stream_elementschemedata.hasNext() ) {
                        adaptor.addChild(root_1, stream_elementschemedata.nextTree());

                    }
                    stream_elementschemedata.reset();

                    adaptor.addChild(root_0, root_1);
                    }

                }
                stream_elementschemedata.reset();

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException e) {

                    emitErrorMessage("Error: invalid element expression '" + input + "'");
                    consumeUntil(input, RBRACE);
                    throw new XPointerException(e);
                
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, pointerpart_element_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "pointerpart_element"


    public static class pointerpart_xpath_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "pointerpart_xpath"
    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:69:1: pointerpart_xpath : XPATH LBRACE xpathschemedata RBRACE -> ^( XPATHSCHEME xpathschemedata ) ;
    public final XPointerParser.pointerpart_xpath_return pointerpart_xpath() throws RecognitionException {
        XPointerParser.pointerpart_xpath_return retval = new XPointerParser.pointerpart_xpath_return();
        retval.start = input.LT(1);

        int pointerpart_xpath_StartIndex = input.index();

        CommonTree root_0 = null;

        Token XPATH14=null;
        Token LBRACE15=null;
        Token RBRACE17=null;
        XPointerParser.xpathschemedata_return xpathschemedata16 =null;


        CommonTree XPATH14_tree=null;
        CommonTree LBRACE15_tree=null;
        CommonTree RBRACE17_tree=null;
        RewriteRuleTokenStream stream_XPATH=new RewriteRuleTokenStream(adaptor,"token XPATH");
        RewriteRuleTokenStream stream_RBRACE=new RewriteRuleTokenStream(adaptor,"token RBRACE");
        RewriteRuleTokenStream stream_LBRACE=new RewriteRuleTokenStream(adaptor,"token LBRACE");
        RewriteRuleSubtreeStream stream_xpathschemedata=new RewriteRuleSubtreeStream(adaptor,"rule xpathschemedata");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }

            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:70:5: ( XPATH LBRACE xpathschemedata RBRACE -> ^( XPATHSCHEME xpathschemedata ) )
            // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:70:9: XPATH LBRACE xpathschemedata RBRACE
            {
            XPATH14=(Token)match(input,XPATH,FOLLOW_XPATH_in_pointerpart_xpath409); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_XPATH.add(XPATH14);


            LBRACE15=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_pointerpart_xpath411); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_LBRACE.add(LBRACE15);


            pushFollow(FOLLOW_xpathschemedata_in_pointerpart_xpath413);
            xpathschemedata16=xpathschemedata();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_xpathschemedata.add(xpathschemedata16.getTree());

            RBRACE17=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_pointerpart_xpath415); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_RBRACE.add(RBRACE17);


            // AST REWRITE
            // elements: xpathschemedata
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (CommonTree)adaptor.nil();
            // 70:53: -> ^( XPATHSCHEME xpathschemedata )
            {
                // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:70:56: ^( XPATHSCHEME xpathschemedata )
                {
                CommonTree root_1 = (CommonTree)adaptor.nil();
                root_1 = (CommonTree)adaptor.becomeRoot(
                (CommonTree)adaptor.create(XPATHSCHEME, "XPATHSCHEME")
                , root_1);

                adaptor.addChild(root_1, stream_xpathschemedata.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, pointerpart_xpath_StartIndex); }

        }
        return retval;
    }
    // $ANTLR end "pointerpart_xpath"


    public static class pointerpart_xpointer_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "pointerpart_xpointer"
    // org/etourdot/xincproc/xpointer/grammar/XPointerParser.g:73:1: pointerpart_xpointer : XPOINTER LBRACE xpathschemedata RBRACE -> ^( XPOINTERSCHEME xpathschemedata ) ;
    public final XPointerParser.pointerpart_xpointer_return pointerpart_xpointer() throws RecognitionException {
        XPointerParser.pointerpart_xpointer_return retval = new XPointerParser.pointerpart_xpointer_return();
        retval.start = input.LT(1);

        int pointerpart_xpointer_StartIndex = input.index();

        CommonTree root_0 = null;

        Token XPOINTER18=null;
        Token LBRACE19=null;
        Token RBRACE21=null;
        XPointerParser.xpathschemedata_return xpathschemedata20 =null;


        CommonTree XPOINTER18_tree=null;
        CommonTree LBRACE19_tree=null;
        CommonTree RBRACE21_tree=null;
        RewriteRuleTokenStream stream_RBRACE=new RewriteRuleTokenStream(adaptor,"token RBRACE");
        RewriteRuleTokenStream stream_XPOINTER=new RewriteRuleTokenStream(adaptor,"token XPOINTER");
        RewriteRuleTokenStream stream_LBRACE=new RewriteRuleTokenStream(adaptor,"token LBRACE");
        RewriteRuleSubtreeStream stream_xpathschemedata=new RewriteRuleSubtreeStream(adaptor,"rule xpathschemedata");
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return retval; }
